@@ -35,7 +35,8 @@ package XE_Stubs is
      (PID : in XE_Back.PID_Type;
       Lib : in ALI.ALI_Id);
    --  Starting from an ali file, search though all the dependency
-   --  chain to mark units present on a partition PID.
+   --  chain to mark units present on a partition PID. This allows
+   --  to compute the partition closure.
 
    procedure Build;
    --  Main procedure to generate all stubs and partition executables.
